# WebHacker

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/src/: Analyzer.cpp  Analyzer.hpp
gui/: CMakeLists.txt  WebHacker.qrc
gui/src/: CMakeLists.txt  main.cpp
src/: Analyzer.cpp  main.cpp
